# avoidance_robot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/diffdrive_esp32/include/diffdrive_esp32/diffdrive_esp32/: esp32_comms.hpp  visibility_control.h
install/diffdrive_esp32/share/diffdrive_esp32/: package.bash  package.sh  package.xml  package.zsh
install/mpu6050/include/mpu6050_hardware_interface/mpu6050/: mpu6050_lib.h
install/mpu6050/lib/mpu6050/: mpu6050_offsets  test_mpu6050
install/mpu6050/share/mpu6050/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rtf_lds_driver/lib/rtf_lds_driver/: hlds_laser_publisher
install/rtf_lds_driver/share/rtf_lds_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rtf_lds_driver/share/rtf_lds_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  rtf_lds_driverConfig.cmake
install/rtf_lds_driver/share/rtf_lds_driver/launch/: hlds_laser.launch.py
install/turtlebot3_controller/lib/turtlebot3_controller/: odom_publisher
install/turtlebot3_controller/share/turtlebot3_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_description/share/turtlebot3_description/: local_setup.sh  package.sh
src/diffdrive_esp32/: CMakeLists.txt  diffdrive_esp32.xml
src/diffdrive_esp32/hardware/: diffbot_system.cpp
src/mpu6050/: CMakeLists.txt  mpu6050_hardware.xml
src/mpu6050/include/mpu6050/: mpu6050_hardware_interface.hpp
src/mpu6050/src/: mpu6050_covariances.cpp  mpu6050_hardware_interface.cpp  mpu6050_lib.cpp  mpu6050_offsets.cpp  test_mpu6050.cpp
src/rtf_lds_lidar-master/: .gitignore  CMakeLists.txt  readme.md
src/rtf_lds_lidar-master/src/: hlds_laser_publisher.cpp
src/turtlebot3_controller/: CMakeLists.txt  package.xml
src/turtlebot3_controller/config/: controller.yaml  ekf.yaml
src/turtlebot3_controller/include/turtlebot3_controller/: odom_publisher.hpp
src/turtlebot3_controller/launch/: tb3_bringup.launch.py
src/turtlebot3_controller/src/: odom_publisher.cpp
src/turtlebot3_description/: CMakeLists.txt
src/turtlebot3_description/gazebo_world/: play_ground  real_corridor  test_big_corridor
src/turtlebot3_description/launch/: display.launch.py  gazebo.launch.py  robot_state_publisher.launch.py
src/turtlebot3_description/urdf/: turtlebot3.gazebo.xacro  turtlebot3_ros2_control.xacro
(+11 files in other folders)
